# reader

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml
src/: extractor.rs  main.rs  server.rs  util.rs
src/extractor/: extractor.rs  mod.rs  read_position.rs
src/server/: api_server.rs  endpoints.rs  mod.rs  previous_path.rs  server.rs
src/server/assets/: section_view.html
