[package]
name = "reader"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
epub = "2.1.5"
hex = "0.4.3"
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.51.1", features = ["full"] }
tera = "1"
tower-http = { version = "0.6.8", features = ["fs"] }
walkdir = "2.5.0"
percent-encoding = "2"
